BMesh: decimate, test for face flip was too low

Created overlapping faces in T44780